<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_juxing"
    android:gravity="center"
    android:orientation="vertical">
    <TextView
        android:id="@+id/title"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="14dp"
        android:text="@string/qingxidu"
        android:textColor="#000000"
        android:textSize="18sp" />
<RadioGroup
    android:id="@+id/rg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginTop="10dp">
    <RadioButton
        android:id="@+id/rb_biao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/standard_definition"
        android:layout_margin="10dp"
        android:textColor="@color/text_bg"
        android:button="@drawable/radiobutton"
        android:textSize="15sp" />
    <RadioButton
        android:id="@+id/rb_gao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hd"
        android:layout_margin="10dp"
        android:textColor="@color/text_bg"
        android:button="@drawable/radiobutton"
        android:textSize="15sp" />
    <RadioButton
        android:id="@+id/rb_chao"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/super_clear"
        android:textColor="@color/text_bg"
        android:button="@drawable/radiobutton"
        android:textSize="15sp" />
</RadioGroup>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/positiveButton"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:text="@string/OK"
            android:textSize="15sp"
            android:textColor="#f1f1f1"
            android:background="@drawable/button_selector"
            android:layout_marginRight="10dp"/>
        <Button
            android:id="@+id/negativeButton"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:textSize="15sp"
            android:text="@string/cancel"
            android:textColor="#f1f1f1"
            android:background="@drawable/button_selector"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

</LinearLayout>
