<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#f5f5f5"
        android:layout_weight="1.0">
        <ImageView
            android:id="@+id/iv_noNet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/nonet"/>
    <com.hotcast.vr.MyViewPager
    android:id="@+id/layout_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"/>
        <ScrollView
            android:id="@+id/rl_agreement"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:visibility="gone">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_margin="10dp"
                android:id="@+id/tv_b"
                android:text="免责声明"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_margin="10dp"
            android:layout_below="@+id/tv_b"
            android:id="@+id/tv_a"
            android:text="@string/user_agreement"
            android:textSize="15sp"/>
            <CheckBox
                android:id="@+id/cb_agreement"
                android:layout_below="@+id/tv_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="我同意"
                android:textSize="10sp"
                android:textColor="#000000"
                android:layout_margin="10dp"/>

        </RelativeLayout>
        </ScrollView>

    </FrameLayout>
    <RadioGroup
        android:id="@+id/main_radio"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:paddingTop="2dp">
        <RadioButton
            android:id="@+id/page_home"
            style="@style/main_button"
            android:drawableTop="@drawable/home"
            android:text="@string/main_home" />
        <RadioButton
            android:id="@+id/page_classify"
            style="@style/main_button"
            android:drawableTop="@drawable/classify"
            android:text="@string/main_classify" />
        <RadioButton
            android:id="@+id/page_mine"
            style="@style/main_button"
            android:drawableTop="@drawable/mine"
            android:text="@string/main_mine" />

    </RadioGroup>

</LinearLayout>
