<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">

    <include
        android:id="@+id/head"
        layout="@layout/layout_head2" />

    <RelativeLayout
        android:id="@+id/rl_cache"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="19dp"
        android:background="#ffffff"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_cache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:src="@mipmap/mine_cache" />

        <TextView
            style="@style/mine_text"
            android:layout_toRightOf="@id/iv_cache"
            android:paddingLeft="6dp"
            android:text="@string/mine_cache" />

        <ImageView
            android:id="@+id/enter_cache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingRight="10dp"
            android:src="@mipmap/enter" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_change"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="19dp"
        android:background="#ffffff"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:src="@mipmap/change" />

        <TextView
            style="@style/mine_text"
            android:layout_toRightOf="@id/iv_change"
            android:paddingLeft="6dp"
            android:text="@string/mine_change" />

        <ImageView
            android:id="@+id/enter_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingRight="10dp"
            android:src="@mipmap/enter" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_glasses"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="19dp"
        android:background="#ffffff"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_glasses"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:paddingLeft="10dp"

            android:src="@mipmap/glasses_store" />

        <TextView
            android:id="@+id/textView"
            style="@style/mine_text"
            android:layout_marginTop="7dp"
            android:layout_toRightOf="@id/iv_glasses"
            android:paddingLeft="6dp"
            android:text="@string/VRglasses" />

        <ImageView
            android:id="@+id/enter_glasses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/textView"
            android:paddingRight="10dp"
            android:src="@mipmap/enter" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#c0c0c0" />

    <RelativeLayout
        android:id="@+id/rl_glasses2"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="#ffffff"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_glasses2"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:paddingLeft="10dp"
            android:src="@mipmap/change_to_vr" />

        <TextView
            android:id="@+id/textView2"
            style="@style/mine_text"
            android:layout_marginTop="7dp"
            android:layout_toRightOf="@id/iv_glasses2"
            android:paddingLeft="6dp"
            android:text="@string/selectVRglasses" />

        <ImageView
            android:id="@+id/enter_glasses2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/textView2"
            android:paddingRight="10dp"
            android:src="@mipmap/enter" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#c0c0c0" />

    <RelativeLayout
        android:id="@+id/rl_about"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="#ffffff"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:src="@mipmap/mine_about" />

        <TextView
            style="@style/mine_text"
            android:layout_toRightOf="@id/iv_about"
            android:paddingLeft="6dp"
            android:text="@string/mine_about" />

        <ImageView
            android:id="@+id/enter_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingRight="10dp"
            android:src="@mipmap/enter" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#c0c0c0" />

    <RelativeLayout
        android:id="@+id/rl_version"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="#ffffff"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:src="@mipmap/mine_version" />

        <TextView
            style="@style/mine_text"
            android:layout_toRightOf="@id/iv_version"
            android:paddingLeft="6dp"
            android:text="@string/mine_version" />

        <ImageView
            android:id="@+id/enter_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingRight="10dp"
            android:src="@mipmap/enter" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#c0c0c0" />

    <RelativeLayout
        android:id="@+id/rl_help"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="#ffffff"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:src="@mipmap/mine_help" />

        <TextView
            style="@style/mine_text"
            android:layout_toRightOf="@id/iv_help"
            android:paddingLeft="12dp"
            android:text="@string/mine_help" />

        <ImageView
            android:id="@+id/enter_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingRight="10dp"
            android:src="@mipmap/enter" />
    </RelativeLayout>

</LinearLayout>
