<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f5f5f5"
    android:orientation="vertical">
   <RelativeLayout
       android:id="@+id/rl_cache"
       android:background="#ffffff"
       android:layout_marginTop="19dp"
       android:layout_width="match_parent"
       android:layout_height="43dp"
       android:gravity="center_vertical">
       <ImageView
           android:id="@+id/iv_cache"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingLeft="10dp"
           android:src="@mipmap/mine_cache"/>
       <TextView
           android:paddingLeft="6dp"
           android:layout_toRightOf="@id/iv_cache"
           style="@style/mine_text"
           android:text="@string/mine_cache"/>
       <ImageView
           android:id="@+id/enter_cache"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentRight="true"
           android:paddingRight="10dp"
           android:src="@mipmap/enter"/>
   </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_about"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="19dp"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/iv_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:src="@mipmap/mine_about"/>
        <TextView
            android:layout_toRightOf="@id/iv_about"
            android:paddingLeft="6dp"
            style="@style/mine_text"
            android:text="@string/mine_about"/>
        <ImageView
            android:id="@+id/enter_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingRight="10dp"
            android:src="@mipmap/enter"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#c0c0c0"/>
    <RelativeLayout
        android:id="@+id/rl_version"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/iv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:src="@mipmap/mine_version"/>
        <TextView
            android:layout_toRightOf="@id/iv_version"
            android:paddingLeft="6dp"
            style="@style/mine_text"
            android:text="@string/mine_version" />
        <ImageView
            android:id="@+id/enter_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingRight="10dp"
            android:src="@mipmap/enter"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#c0c0c0"/>
    <RelativeLayout
        android:id="@+id/rl_help"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/iv_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:src="@mipmap/mine_help"/>
        <TextView
            android:layout_toRightOf="@id/iv_help"
            android:paddingLeft="12dp"
            style="@style/mine_text"
            android:text="@string/mine_help"/>
        <ImageView
            android:id="@+id/enter_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingRight="10dp"
            android:src="@mipmap/enter"/>
    </RelativeLayout>

</LinearLayout>
